force-app/main/default/objects/Sprint_Cases__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Effort__c</fullName>
        <description>Actual Effort for this sprint on this case</description>
        <label>Actual Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Sprints</relationshipLabel>
        <relationshipName>Sprint_Cases</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Sprint__c</fullName>
        <label>Related Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Sprint Cases</relationshipLabel>
        <relationshipName>Sprint_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sprint Cases</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Sprint Cases Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprint Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>